rearrange and add more food

--- a/src/yaml/food.yaml
+++ b/src/yaml/food.yaml
@@ -1,10 +1,10 @@
 - SECTION: 'Power Food'
 
-  jerk-poultry:
-    text: 'Plate of Jerk Poultry'
+  sweet-and-spicy-butternut-squash-soup:
+    text: 'Bowl of Sweet and Spicy Butternut Squash Soup<br> / Sous-Vide Steak '
     modifiers:
-      flat: {'Power': 150}
-    gw2-id: 71797
+      flat: {'Power': 100, 'Ferocity': 70}
+    gw2-id: 41569
     armory-type: 'items'
 
   truffle-steak:
@@ -14,18 +14,45 @@
     gw2-id: 12467
     armory-type: 'items'
 
-  sweet-and-spicy-butternut-squash-soup:
-    text: 'Bowl of Sweet and Spicy Butternut Squash Soup <br>/ Sous-Vide Steak '
+  curry-butternut-squash-soup:
+    text: 'Bowl of Curry Butternut Squash Soup'
     modifiers:
-      flat: {'Power': 100, 'Ferocity': 70}
-    gw2-id: 41569
+      flat: {'Precision': 100, 'Ferocity': 70}
+    gw2-id: 12486
     armory-type: 'items'
 
-  roasted-cactus:
-    text: 'Plate of Roasted Cactus'
+  dragon's-breath-bun:
+    text: >
+      Dragon's Breath Bun 
+      <small class="text-muted font-italic">(100% uptime) </small>
     modifiers:
-      flat: {'Ferocity': 100}
-    gw2-id: 66536
+      flat: {'Power': 200, 'Ferocity': 70}
+    gw2-id: 43360
+    armory-type: 'items'
+
+  steamed-red-dumpling: &steamed-red-dumpling
+    text: >
+      Steamed Red Dumpling 
+      <small class="text-muted font-italic">(100% uptime) </small>
+    modifiers:
+      flat: {'Power': 200, 'Condition Damage': 140}
+    gw2-id: 68635
+    armory-type: 'items'
+
+  seaweed-salad:
+    text: >
+      Bowl of Seaweed Salad 
+      <small class="text-muted font-italic">(90% uptime) </small>
+    modifiers:
+      multiplier: {'Effective Power': 0.045}
+    gw2-id: 12471
+    armory-type: 'items'
+
+  jerk-poultry:
+    text: 'Plate of Jerk Poultry'
+    modifiers:
+      flat: {'Power': 150}
+    gw2-id: 71797
     armory-type: 'items'
 
   sawgill-mushroom-risotto:
@@ -35,75 +62,29 @@
     gw2-id: 75010
     armory-type: 'items'
 
-  curry-butternut-squash-soup:
-    text: 'Bowl of Curry Butternut Squash Soup'
+- SECTION: 'Solo Food'
+
+  roasted-cactus:
+    text: 'Plate of Roasted Cactus'
     modifiers:
-      flat: {'Precision': 100, 'Ferocity': 70}
-    gw2-id: 12486
+      flat: {'Ferocity': 100}
+    gw2-id: 66536
     armory-type: 'items'
 
-  seaweed-salad:
-    text: >
-      Bowl of Seaweed Salad<br> 
-      <small class="text-muted font-italic">(90% uptime) </small>
+  fried-golden-dumpling: &fried-golden-dumpling
+    text: 'Fried Golden Dumpling / Cheesecake'
     modifiers:
-      multiplier: {'Effective Power': 0.045}
-    gw2-id: 12471
-    armory-type: 'items'
-
-  dragon's-breath-bun:
-    text: >
-      Dragon's Breath Bun<br> 
-      <small class="text-muted font-italic">(100% uptime) </small>
-    modifiers:
-      flat: {'Power': 200, 'Ferocity': 70}
-    gw2-id: 43360
-    armory-type: 'items'
-
-  steamed-red-dumpling:
-    text: >
-      Steamed Red Dumpling<br> 
-      <small class="text-muted font-italic">(100% uptime) </small>
-    modifiers:
-      flat: {'Power': 200, 'Condition Damage': 140}
-    gw2-id: 68635
+      flat: {'Concentration': 100}
+    gw2-id: 68633
     armory-type: 'items'
 
 - SECTION: 'Support Food'
-
-  poultry-satay:
-    text: 'Bowl of Poultry Satay / Fruit Salad'
-    modifiers:
-      flat: {'Healing Power': 100, 'Concentration': 70}
-    gw2-id: 87076
-    armory-type: 'items'
-
-  creme-brulee:
-    text: 'Creme Brulee'
-    modifiers:
-      flat: {'Concentration': 100, 'Healing Power': 70}
-    gw2-id: 91746
-    armory-type: 'items'
-
-  eggs-benedict:
-    text: 'Plate of Eggs Benedict'
-    modifiers:
-      flat: {'Concentration': 100, 'Expertise': 70}
-    gw2-id: 91842
-    armory-type: 'items'
 
   soul-pastry:
     text: 'Soul Pastry / Beef Carpaccio'
     modifiers:
       flat: {'Concentration': 100, 'Power': 70}
     gw2-id: 89002
-    armory-type: 'items'
-
-  fried-golden-dumpling:
-    text: 'Fried Golden Dumpling / Cheesecake'
-    modifiers:
-      flat: {'Concentration': 100}
-    gw2-id: 68633
     armory-type: 'items'
 
   nopalitos-saute:
@@ -123,12 +104,35 @@
 
 - SECTION: 'Heal Food'
 
+  fruit-salad-mint-garnish:
+    text: 'Bowl of Fruit Salad with Mint Garnish'
+    modifiers:
+      flat: {'Healing Power': 100, 'Concentration': 70}
+      multiplier: {'Effective Healing': 0.1}
+    gw2-id: 91690
+    armory-type: 'items'
+
+  mint-creme-brulee:
+    text: 'Mint Creme Brulee'
+    modifiers:
+      flat: {'Concentration': 100, 'Healing Power': 70}
+      multiplier: {'Effective Healing': 0.1}
+    gw2-id: 91743
+    armory-type: 'items'
+
   delicious-rice-ball:
     text: 'Delicious Rice Ball'
     modifiers:
       flat: {'Healing Power': 100}
       multiplier: {'Effective Healing': 0.1}
     gw2-id: 68634
+    armory-type: 'items'
+
+  poultry-satay:
+    text: 'Bowl of Poultry Satay'
+    modifiers:
+      flat: {'Healing Power': 100, 'Concentration': 70}
+    gw2-id: 87076
     armory-type: 'items'
 
 - SECTION: 'Condition Food'
@@ -140,15 +144,6 @@
     gw2-id: 12464
     armory-type: 'items'
 
-  saffron-stuffed-mushroom:
-    text: >
-      Saffron Stuffed Mushroom<br> 
-      <small class="text-muted font-italic">(100% uptime) </small>
-    modifiers:
-      flat: {'Precision': 70, 'Condition Damage': 200}
-    gw2-id: 12476
-    armory-type: 'items'
-
   beef-rendang:
     text: 'Plate of Beef Rendang / Cured Meat Flatbread'
     modifiers:
@@ -156,11 +151,22 @@
     gw2-id: 86997
     armory-type: 'items'
 
-  prickly-pear-pie:
-    text: 'Prickly Pear Pie'
+  saffron-stuffed-mushroom:
+    text: >
+      Saffron Stuffed Mushroom 
+      <small class="text-muted font-italic">(100% uptime) </small>
     modifiers:
-      flat: {'Expertise': 100}
-    gw2-id: 66538
+      flat: {'Precision': 70, 'Condition Damage': 200}
+    gw2-id: 12476
+    armory-type: 'items'
+
+  steamed-red-dumpling: *steamed-red-dumpling
+
+  fire-meat-chili:
+    text: 'Bowl of Fire Meat Chili'
+    modifiers:
+      flat: {'Burning Duration': 15, 'Precision': 70}
+    gw2-id: 12484
     armory-type: 'items'
 
   fancy-truffle-burger:
@@ -170,14 +176,69 @@
     gw2-id: 12463
     armory-type: 'items'
 
-  fire-meat-chili:
-    text: 'Bowl of Fire Meat Chili'
+  truffle-risotto:
+    text: 'Bowl of Truffle Risotto'
     modifiers:
-      flat: {'Burning Duration': 15, 'Precision': 70}
-    gw2-id: 12484
+      flat: {'Condition Damage': 100, 'Precision': 70}
+    gw2-id: 12465
+    armory-type: 'items'
+
+  sweet-and-spicy-beans:
+    text: 'Bowl of Sweet and Spicy Beans'
+    modifiers:
+      flat: {'Expertise': 100, 'Power': 70}
+    gw2-id: 66528
+    armory-type: 'items'
+
+  fire-flank-steak:
+    text: 'Plate of Fire Flank Steak'
+    modifiers:
+      flat: {'Power': 100, 'Condition Damage': 70}
+    gw2-id: 12466
+    armory-type: 'items'
+
+  fancy-potato-and-leek-soup:
+    text: 'Bowl of Fancy Potato and Leek Soup'
+    modifiers:
+      flat: {'Precision': 100, 'Condition Damage': 70}
+    gw2-id: 12485
+    armory-type: 'items'
+
+  prickly-pear-pie:
+    text: 'Prickly Pear Pie'
+    modifiers:
+      flat: {'Expertise': 100}
+    gw2-id: 66538
     armory-type: 'items'
 
 - SECTION: 'Hybrid Food'
+
+  dragon's-revelry-starcake:
+    text: 'Dragon''s Revelry Starcake / Oyster Soup'
+    modifiers:
+      flat: {'Power': 45, 'Precision': 45, 'Toughness': 45, 'Vitality': 45,
+        'Concentration': 45, 'Condition Damage': 45, 'Expertise': 45,
+        'Ferocity': 45, 'Healing Power': 45}
+    gw2-id: 43550
+    armory-type: 'items'
+
+  eggs-benedict:
+    text: 'Plate of Eggs Benedict'
+    modifiers:
+      flat: {'Concentration': 100, 'Expertise': 70}
+    gw2-id: 91842
+    armory-type: 'items'
+
+  birthday-blaster:
+    text: 'Birthday Blaster'
+    modifiers:
+      flat: {'Power': 40, 'Precision': 40, 'Toughness': 40, 'Vitality': 40,
+        'Concentration': 40, 'Condition Damage': 40, 'Expertise': 40,
+        'Ferocity': 40, 'Healing Power': 40}
+    gw2-id: 66961
+    armory-type: 'items'
+
+- SECTION: 'Toughness Food'
 
   spicy-marinated-mushroom:
     text: 'Spicy Marinated Mushroom'
@@ -200,49 +261,38 @@
     gw2-id: 12461
     armory-type: 'items'
 
-  dragon's-revelry-starcake:
-    text: 'Dragon''s Revelry Starcake / Oyster Soup'
+  ascended-ravioli:
+    text: 'Ascended Ravioli'
     modifiers:
-      flat: {'Power': 45, 'Precision': 45, 'Toughness': 45, 'Vitality': 45,
-        'Concentration': 45, 'Condition Damage': 45, 'Expertise': 45,
-        'Ferocity': 45, 'Healing Power': 45}
-    gw2-id: 43550
+      flat: {'Vitality': 70, 'Toughness': 70}
+    gw2-id: 91735
     armory-type: 'items'
 
-  fire-flank-steak:
-    text: 'Plate of Fire Flank Steak'
+  kralkachocolate-bar:
+    text: 'Kralkachocolate Bar'
     modifiers:
-      flat: {'Power': 100, 'Condition Damage': 70}
-    gw2-id: 12466
+      flat: {'Healing Power': 100, 'Toughness': 70}
+    gw2-id: 43358
     armory-type: 'items'
 
-  fancy-potato-and-leek-soup:
-    text: 'Bowl of Fancy Potato and Leek Soup'
+  chocolate-tapioca-pudding:
+    text: 'Bowl of Chocolate Tapioca Pudding'
     modifiers:
-      flat: {'Precision': 100, 'Condition Damage': 70}
-    gw2-id: 12485
+      flat: {'Healing Power': 70, 'Toughness': 100}
+    gw2-id: 76415
     armory-type: 'items'
 
-  sweet-and-spicy-beans:
-    text: 'Bowl of Sweet and Spicy Beans'
+  tropical-mousse:
+    text: 'Bowl of Tropical Mousse'
     modifiers:
-      flat: {'Expertise': 100, 'Power': 70}
-    gw2-id: 66528
+      flat: {'Condition Damage': 70, 'Toughness': 100}
+    gw2-id: 36841
     armory-type: 'items'
 
-  truffle-risotto:
-    text: 'Bowl of Truffle Risotto'
+  elon-red:
+    text: 'Bowl of "Elon Red"'
     modifiers:
-      flat: {'Condition Damage': 100, 'Precision': 70}
-    gw2-id: 12465
-    armory-type: 'items'
-
-  birthday-blaster:
-    text: 'Birthday Blaster'
-    modifiers:
-      flat: {'Power': 40, 'Precision': 40, 'Toughness': 40, 'Vitality': 40,
-        'Concentration': 40, 'Condition Damage': 40, 'Expertise': 40,
-        'Ferocity': 40, 'Healing Power': 40}
-    gw2-id: 66961
+      flat: {'Expertise': 100, 'Toughness': 70}
+    gw2-id: 82541
     armory-type: 'items'
 
