--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,6 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.yaml]
+trim_trailing_whitespace = true
